[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "scan_merge"
description = "Tool to merge scanned PDFs from single sided document feeders"
readme = "README.md"
authors = [
    {name = "Arvid Norlander", email = "VorpalBlade@users.noreply.github.com"}
]
license = {text = "GPL-3.0"}
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
]
dependencies = [
    "argcomplete",
    "funcy",
    "pypdf2"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/VorpalBlade/scan_merge"

[project.scripts]
scan_merge = "scan_merge:main"

[tool.setuptools_scm]
